[gd_scene load_steps=16 format=2]

[ext_resource path="res://TSCN/Cursor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=2]
[ext_resource path="res://Graphics/placeholder_tiles.png" type="Texture" id=3]
[ext_resource path="res://Graphics/font/Boxy-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Graphics/placeholder_tiles2.png" type="Texture" id=5]
[ext_resource path="res://Graphics/pixel leopard logo.png" type="Texture" id=6]

[sub_resource type="Theme" id=8]

[sub_resource type="DynamicFont" id=9]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 50.2, 25 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 46.1667, 10 )

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=2]
0/name = "placeholder_tiles.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "placeholder_tiles.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 64, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "placeholder_tiles.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 128, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "placeholder_tiles.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 192, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "placeholder_tiles.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 64, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "placeholder_tiles.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 64, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "placeholder_tiles.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 128, 64, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "placeholder_tiles.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 192, 64, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "placeholder_tiles.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 128, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0
9/name = "placeholder_tiles2.png 9"
9/texture = ExtResource( 5 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 64, 0, 64, 64 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape_one_way = false
9/shape_one_way_margin = 0.0
9/shapes = [  ]
9/z_index = 0
10/name = "placeholder_tiles2.png 10"
10/texture = ExtResource( 5 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 0, 128, 64, 64 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape_one_way = false
10/shape_one_way_margin = 0.0
10/shapes = [  ]
10/z_index = 0

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 67.7999, 24.4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[node name="Menu" type="Node"]
script = ExtResource( 2 )

[node name="Cursor" parent="." instance=ExtResource( 1 )]
z_index = 1

[node name="Button" type="Button" parent="."]
margin_left = 336.0
margin_top = 181.0
margin_right = 377.0
margin_bottom = 201.0
rect_scale = Vector2( 6, 6 )
focus_mode = 0
theme = SubResource( 8 )
custom_fonts/font = SubResource( 9 )
enabled_focus_mode = 0
text = "start"

[node name="Area2D" type="Area2D" parent="Button"]
position = Vector2( -41.6667, -17.8333 )
scale = Vector2( 0.166667, 0.166667 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
position = Vector2( 374, 168 )
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button2" type="Button" parent="."]
margin_left = 828.0
margin_top = 259.0
margin_right = 920.0
margin_bottom = 279.0
rect_scale = Vector2( 6, 6 )
focus_mode = 0
enabled_focus_mode = 0
text = "change level"

[node name="Area2D" type="Area2D" parent="Button2"]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button2/Area2D"]
position = Vector2( 46.3333, 9.66666 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 0, 0, 1 )
margin_left = 842.0
margin_top = 128.0
margin_right = 918.0
margin_bottom = 142.0
rect_scale = Vector2( 6, 6 )
text = "Sample text"
align = 1

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 864, 576 )

[node name="Camera2D2" type="Camera2D" parent="."]
offset = Vector2( -864, 576 )

[node name="TileMap" type="TileMap" parent="."]
z_index = -1
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( 65509, 10, 0, 65510, 10, 0, 65511, 10, 0, 65512, 10, 0, 65513, 10, 0, 65514, 10, 0, 65515, 10, 0, 65516, 10, 0, 65517, 10, 0, 65518, 10, 0, 65519, 10, 0, 65520, 10, 0, 65521, 10, 0, 65522, 10, 0, 65523, 10, 0, 65524, 10, 0, 65525, 10, 0, 65526, 10, 0, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 10, 0, 65535, 10, 0, 0, 8, 0, 1, 8, 0, 2, 8, 0, 3, 8, 0, 4, 8, 0, 5, 8, 0, 6, 8, 0, 7, 8, 0, 8, 8, 0, 9, 8, 0, 10, 8, 0, 11, 8, 0, 12, 8, 0, 13, 8, 0, 14, 8, 0, 15, 8, 0, 16, 8, 0, 17, 8, 0, 18, 8, 0, 19, 8, 0, 20, 8, 0, 21, 8, 0, 22, 8, 0, 23, 8, 0, 24, 8, 0, 25, 8, 0, 26, 8, 0, 131045, 10, 0, 131046, 9, 0, 131047, 9, 0, 131048, 9, 0, 131049, 9, 0, 131050, 9, 0, 131051, 9, 0, 131052, 9, 0, 131053, 9, 0, 131054, 9, 0, 131055, 9, 0, 131056, 9, 0, 131057, 9, 0, 131058, 9, 0, 131059, 9, 0, 131060, 9, 0, 131061, 9, 0, 131062, 9, 0, 131063, 9, 0, 131064, 9, 0, 131065, 9, 0, 131066, 9, 0, 131067, 9, 0, 131068, 9, 0, 131069, 9, 0, 131070, 9, 0, 131071, 10, 0, 65536, 8, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 65557, 1, 0, 65558, 1, 0, 65559, 1, 0, 65560, 1, 0, 65561, 1, 0, 65562, 8, 0, 196581, 10, 0, 196582, 9, 0, 196583, 9, 0, 196584, 9, 0, 196585, 9, 0, 196586, 9, 0, 196587, 9, 0, 196588, 9, 0, 196589, 9, 0, 196590, 9, 0, 196591, 9, 0, 196592, 9, 0, 196593, 9, 0, 196594, 9, 0, 196595, 9, 0, 196596, 9, 0, 196597, 9, 0, 196598, 9, 0, 196599, 9, 0, 196600, 9, 0, 196601, 9, 0, 196602, 9, 0, 196603, 9, 0, 196604, 9, 0, 196605, 9, 0, 196606, 9, 0, 196607, 10, 0, 131072, 8, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 1, 0, 131092, 1, 0, 131093, 1, 0, 131094, 1, 0, 131095, 1, 0, 131096, 1, 0, 131097, 1, 0, 131098, 8, 0, 262117, 10, 0, 262118, 9, 0, 262119, 9, 0, 262120, 9, 0, 262121, 9, 0, 262122, 9, 0, 262123, 9, 0, 262124, 9, 0, 262125, 9, 0, 262126, 9, 0, 262127, 9, 0, 262128, 9, 0, 262129, 9, 0, 262130, 9, 0, 262131, 9, 0, 262132, 9, 0, 262133, 9, 0, 262134, 9, 0, 262135, 9, 0, 262136, 9, 0, 262137, 9, 0, 262138, 9, 0, 262139, 9, 0, 262140, 9, 0, 262141, 9, 0, 262142, 9, 0, 262143, 10, 0, 196608, 8, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 1, 0, 196628, 1, 0, 196629, 1, 0, 196630, 1, 0, 196631, 1, 0, 196632, 1, 0, 196633, 1, 0, 196634, 8, 0, 327653, 10, 0, 327654, 9, 0, 327655, 9, 0, 327656, 9, 0, 327657, 9, 0, 327658, 9, 0, 327659, 9, 0, 327660, 9, 0, 327661, 9, 0, 327662, 9, 0, 327663, 9, 0, 327664, 9, 0, 327665, 9, 0, 327666, 9, 0, 327667, 9, 0, 327668, 9, 0, 327669, 9, 0, 327670, 9, 0, 327671, 9, 0, 327672, 9, 0, 327673, 9, 0, 327674, 9, 0, 327675, 9, 0, 327676, 9, 0, 327677, 9, 0, 327678, 9, 0, 327679, 10, 0, 262144, 8, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 262167, 1, 0, 262168, 1, 0, 262169, 1, 0, 262170, 8, 0, 393189, 10, 0, 393190, 9, 0, 393191, 9, 0, 393192, 9, 0, 393193, 9, 0, 393194, 9, 0, 393195, 9, 0, 393196, 9, 0, 393197, 9, 0, 393198, 9, 0, 393199, 9, 0, 393200, 9, 0, 393201, 9, 0, 393202, 9, 0, 393203, 9, 0, 393204, 9, 0, 393205, 9, 0, 393206, 9, 0, 393207, 9, 0, 393208, 9, 0, 393209, 9, 0, 393210, 9, 0, 393211, 9, 0, 393212, 9, 0, 393213, 9, 0, 393214, 9, 0, 393215, 10, 0, 327680, 8, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 1, 0, 327700, 1, 0, 327701, 1, 0, 327702, 1, 0, 327703, 1, 0, 327704, 1, 0, 327705, 1, 0, 327706, 8, 0, 458725, 10, 0, 458726, 9, 0, 458727, 9, 0, 458728, 9, 0, 458729, 9, 0, 458730, 9, 0, 458731, 9, 0, 458732, 9, 0, 458733, 9, 0, 458734, 9, 0, 458735, 9, 0, 458736, 9, 0, 458737, 9, 0, 458738, 9, 0, 458739, 9, 0, 458740, 9, 0, 458741, 9, 0, 458742, 9, 0, 458743, 9, 0, 458744, 9, 0, 458745, 9, 0, 458746, 9, 0, 458747, 9, 0, 458748, 9, 0, 458749, 9, 0, 458750, 9, 0, 458751, 10, 0, 393216, 8, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 393239, 1, 0, 393240, 1, 0, 393241, 1, 0, 393242, 8, 0, 524261, 10, 0, 524262, 9, 0, 524263, 9, 0, 524264, 9, 0, 524265, 9, 0, 524266, 9, 0, 524267, 9, 0, 524268, 9, 0, 524269, 9, 0, 524270, 9, 0, 524271, 9, 0, 524272, 9, 0, 524273, 9, 0, 524274, 9, 0, 524275, 9, 0, 524276, 9, 0, 524277, 9, 0, 524278, 9, 0, 524279, 9, 0, 524280, 9, 0, 524281, 9, 0, 524282, 9, 0, 524283, 9, 0, 524284, 9, 0, 524285, 9, 0, 524286, 9, 0, 524287, 10, 0, 458752, 8, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 1, 0, 458772, 1, 0, 458773, 1, 0, 458774, 1, 0, 458775, 1, 0, 458776, 1, 0, 458777, 1, 0, 458778, 8, 0, 589797, 10, 0, 589798, 9, 0, 589799, 9, 0, 589800, 9, 0, 589801, 9, 0, 589802, 9, 0, 589803, 9, 0, 589804, 9, 0, 589805, 9, 0, 589806, 9, 0, 589807, 9, 0, 589808, 9, 0, 589809, 9, 0, 589810, 9, 0, 589811, 9, 0, 589812, 9, 0, 589813, 9, 0, 589814, 9, 0, 589815, 9, 0, 589816, 9, 0, 589817, 9, 0, 589818, 9, 0, 589819, 9, 0, 589820, 9, 0, 589821, 9, 0, 589822, 9, 0, 589823, 10, 0, 524288, 8, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 524311, 1, 0, 524312, 1, 0, 524313, 1, 0, 524314, 8, 0, 655333, 10, 0, 655334, 9, 0, 655335, 9, 0, 655336, 9, 0, 655337, 9, 0, 655338, 9, 0, 655339, 9, 0, 655340, 9, 0, 655341, 9, 0, 655342, 9, 0, 655343, 9, 0, 655344, 9, 0, 655345, 9, 0, 655346, 9, 0, 655347, 9, 0, 655348, 9, 0, 655349, 9, 0, 655350, 9, 0, 655351, 9, 0, 655352, 9, 0, 655353, 9, 0, 655354, 9, 0, 655355, 9, 0, 655356, 9, 0, 655357, 9, 0, 655358, 9, 0, 655359, 10, 0, 589824, 8, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 8, 0, 720869, 10, 0, 720870, 9, 0, 720871, 9, 0, 720872, 9, 0, 720873, 9, 0, 720874, 9, 0, 720875, 9, 0, 720876, 9, 0, 720877, 9, 0, 720878, 9, 0, 720879, 9, 0, 720880, 9, 0, 720881, 9, 0, 720882, 9, 0, 720883, 9, 0, 720884, 9, 0, 720885, 9, 0, 720886, 9, 0, 720887, 9, 0, 720888, 9, 0, 720889, 9, 0, 720890, 9, 0, 720891, 9, 0, 720892, 9, 0, 720893, 9, 0, 720894, 9, 0, 720895, 10, 0, 655360, 8, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 655383, 1, 0, 655384, 1, 0, 655385, 1, 0, 655386, 8, 0, 786405, 10, 0, 786406, 9, 0, 786407, 9, 0, 786408, 9, 0, 786409, 9, 0, 786410, 9, 0, 786411, 9, 0, 786412, 9, 0, 786413, 9, 0, 786414, 9, 0, 786415, 9, 0, 786416, 9, 0, 786417, 9, 0, 786418, 9, 0, 786419, 9, 0, 786420, 9, 0, 786421, 9, 0, 786422, 9, 0, 786423, 9, 0, 786424, 9, 0, 786425, 9, 0, 786426, 9, 0, 786427, 9, 0, 786428, 9, 0, 786429, 9, 0, 786430, 9, 0, 786431, 10, 0, 720896, 8, 0, 720897, 1, 0, 720898, 1, 0, 720899, 1, 0, 720900, 1, 0, 720901, 1, 0, 720902, 1, 0, 720903, 1, 0, 720904, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720915, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 720919, 1, 0, 720920, 1, 0, 720921, 1, 0, 720922, 8, 0, 851941, 10, 0, 851942, 9, 0, 851943, 9, 0, 851944, 9, 0, 851945, 9, 0, 851946, 9, 0, 851947, 9, 0, 851948, 9, 0, 851949, 9, 0, 851950, 9, 0, 851951, 9, 0, 851952, 9, 0, 851953, 9, 0, 851954, 9, 0, 851955, 9, 0, 851956, 9, 0, 851957, 9, 0, 851958, 9, 0, 851959, 9, 0, 851960, 9, 0, 851961, 9, 0, 851962, 9, 0, 851963, 9, 0, 851964, 9, 0, 851965, 9, 0, 851966, 9, 0, 851967, 10, 0, 786432, 8, 0, 786433, 1, 0, 786434, 1, 0, 786435, 1, 0, 786436, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0, 786455, 1, 0, 786456, 1, 0, 786457, 1, 0, 786458, 8, 0, 917477, 10, 0, 917478, 9, 0, 917479, 9, 0, 917480, 9, 0, 917481, 9, 0, 917482, 9, 0, 917483, 9, 0, 917484, 9, 0, 917485, 9, 0, 917486, 9, 0, 917487, 9, 0, 917488, 9, 0, 917489, 9, 0, 917490, 9, 0, 917491, 9, 0, 917492, 9, 0, 917493, 9, 0, 917494, 9, 0, 917495, 9, 0, 917496, 9, 0, 917497, 9, 0, 917498, 9, 0, 917499, 9, 0, 917500, 9, 0, 917501, 9, 0, 917502, 9, 0, 917503, 10, 0, 851968, 8, 0, 851969, 1, 0, 851970, 1, 0, 851971, 1, 0, 851972, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 1, 0, 851978, 1, 0, 851979, 1, 0, 851980, 1, 0, 851981, 1, 0, 851982, 1, 0, 851983, 1, 0, 851984, 1, 0, 851985, 1, 0, 851986, 1, 0, 851987, 1, 0, 851988, 1, 0, 851989, 1, 0, 851990, 1, 0, 851991, 1, 0, 851992, 1, 0, 851993, 1, 0, 851994, 8, 0, 983013, 10, 0, 983014, 9, 0, 983015, 9, 0, 983016, 9, 0, 983017, 9, 0, 983018, 9, 0, 983019, 9, 0, 983020, 9, 0, 983021, 9, 0, 983022, 9, 0, 983023, 9, 0, 983024, 9, 0, 983025, 9, 0, 983026, 9, 0, 983027, 9, 0, 983028, 9, 0, 983029, 9, 0, 983030, 9, 0, 983031, 9, 0, 983032, 9, 0, 983033, 9, 0, 983034, 9, 0, 983035, 9, 0, 983036, 9, 0, 983037, 9, 0, 983038, 9, 0, 983039, 10, 0, 917504, 8, 0, 917505, 1, 0, 917506, 1, 0, 917507, 1, 0, 917508, 1, 0, 917509, 1, 0, 917510, 1, 0, 917511, 1, 0, 917512, 1, 0, 917513, 1, 0, 917514, 1, 0, 917515, 1, 0, 917516, 1, 0, 917517, 1, 0, 917518, 1, 0, 917519, 1, 0, 917520, 1, 0, 917521, 1, 0, 917522, 1, 0, 917523, 1, 0, 917524, 1, 0, 917525, 1, 0, 917526, 1, 0, 917527, 1, 0, 917528, 1, 0, 917529, 1, 0, 917530, 8, 0, 1048549, 10, 0, 1048550, 9, 0, 1048551, 9, 0, 1048552, 9, 0, 1048553, 9, 0, 1048554, 9, 0, 1048555, 9, 0, 1048556, 9, 0, 1048557, 9, 0, 1048558, 9, 0, 1048559, 9, 0, 1048560, 9, 0, 1048561, 9, 0, 1048562, 9, 0, 1048563, 9, 0, 1048564, 9, 0, 1048565, 9, 0, 1048566, 9, 0, 1048567, 9, 0, 1048568, 9, 0, 1048569, 9, 0, 1048570, 9, 0, 1048571, 9, 0, 1048572, 9, 0, 1048573, 9, 0, 1048574, 9, 0, 1048575, 10, 0, 983040, 8, 0, 983041, 1, 0, 983042, 1, 0, 983043, 1, 0, 983044, 1, 0, 983045, 1, 0, 983046, 1, 0, 983047, 1, 0, 983048, 1, 0, 983049, 1, 0, 983050, 1, 0, 983051, 1, 0, 983052, 1, 0, 983053, 1, 0, 983054, 1, 0, 983055, 1, 0, 983056, 1, 0, 983057, 1, 0, 983058, 1, 0, 983059, 1, 0, 983060, 1, 0, 983061, 1, 0, 983062, 1, 0, 983063, 1, 0, 983064, 1, 0, 983065, 1, 0, 983066, 8, 0, 1114085, 10, 0, 1114086, 9, 0, 1114087, 9, 0, 1114088, 9, 0, 1114089, 9, 0, 1114090, 9, 0, 1114091, 9, 0, 1114092, 9, 0, 1114093, 9, 0, 1114094, 9, 0, 1114095, 9, 0, 1114096, 9, 0, 1114097, 9, 0, 1114098, 9, 0, 1114099, 9, 0, 1114100, 9, 0, 1114101, 9, 0, 1114102, 9, 0, 1114103, 9, 0, 1114104, 9, 0, 1114105, 9, 0, 1114106, 9, 0, 1114107, 9, 0, 1114108, 9, 0, 1114109, 9, 0, 1114110, 9, 0, 1114111, 10, 0, 1048576, 8, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 1, 0, 1048586, 1, 0, 1048587, 1, 0, 1048588, 1, 0, 1048589, 1, 0, 1048590, 1, 0, 1048591, 1, 0, 1048592, 1, 0, 1048593, 1, 0, 1048594, 1, 0, 1048595, 1, 0, 1048596, 1, 0, 1048597, 1, 0, 1048598, 1, 0, 1048599, 1, 0, 1048600, 1, 0, 1048601, 1, 0, 1048602, 8, 0, 1179621, 10, 0, 1179622, 10, 0, 1179623, 10, 0, 1179624, 10, 0, 1179625, 10, 0, 1179626, 10, 0, 1179627, 10, 0, 1179628, 10, 0, 1179629, 10, 0, 1179630, 10, 0, 1179631, 10, 0, 1179632, 10, 0, 1179633, 10, 0, 1179634, 10, 0, 1179635, 10, 0, 1179636, 10, 0, 1179637, 10, 0, 1179638, 10, 0, 1179639, 10, 0, 1179640, 10, 0, 1179641, 10, 0, 1179642, 10, 0, 1179643, 10, 0, 1179644, 10, 0, 1179645, 10, 0, 1179646, 10, 0, 1179647, 10, 0, 1114112, 8, 0, 1114113, 8, 0, 1114114, 8, 0, 1114115, 8, 0, 1114116, 8, 0, 1114117, 8, 0, 1114118, 8, 0, 1114119, 8, 0, 1114120, 8, 0, 1114121, 8, 0, 1114122, 8, 0, 1114123, 8, 0, 1114124, 8, 0, 1114125, 8, 0, 1114126, 8, 0, 1114127, 8, 0, 1114128, 8, 0, 1114129, 8, 0, 1114130, 8, 0, 1114131, 8, 0, 1114132, 8, 0, 1114133, 8, 0, 1114134, 8, 0, 1114135, 8, 0, 1114136, 8, 0, 1114137, 8, 0, 1114138, 8, 0 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( -41.6667, -17.8333 )
scale = Vector2( 0.166667, 0.166667 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 374, 168 )
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Credits" type="Label" parent="."]
margin_left = -1646.0
margin_top = 1152.0
margin_right = -1199.0
margin_bottom = 1981.0
rect_scale = Vector2( 2.25, 2.25 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "credits show up here"
uppercase = true

[node name="Button3" type="Button" parent="."]
margin_left = 459.0
margin_top = 515.0
margin_right = 500.0
margin_bottom = 535.0
rect_scale = Vector2( 6, 6 )
focus_mode = 0
enabled_focus_mode = 0
text = "credits"

[node name="Area2D" type="Area2D" parent="Button3"]
position = Vector2( -41.6667, -17.8333 )
scale = Vector2( 0.166667, 0.166667 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button3/Area2D"]
position = Vector2( 419.499, 165.999 )
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label2" type="Label" parent="."]
margin_left = -720.0
margin_top = 1057.0
margin_right = -290.0
margin_bottom = 1075.0
rect_scale = Vector2( 1.5, 1.5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Press [SELECT] or click to return"
align = 2
uppercase = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -334.25, 564.979 )
scale = Vector2( 0.322591, 0.322591 )
texture = ExtResource( 6 )

[node name="Label3" type="Label" parent="."]
margin_left = 1006.0
margin_top = 811.0
margin_right = 1262.0
margin_bottom = 913.0
rect_scale = Vector2( 2.5, 2.5 )
custom_fonts/font = SubResource( 7 )
text = "CONTROLS
MOVE: WASD/ARROWS
SELECT: SPACE/ENTER
START LEVEL: E
RESET LEVEL: R"
align = 1
uppercase = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="area_entered" from="Button/Area2D" to="." method="_Start_Button_Entered"]
[connection signal="area_exited" from="Button/Area2D" to="." method="_Start_Button_Left"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="area_entered" from="Button2/Area2D" to="." method="_Level_Button_Entered"]
[connection signal="area_exited" from="Button2/Area2D" to="." method="_Level_Button_Left"]
[connection signal="area_entered" from="Area2D" to="." method="_Start_Button_Entered"]
[connection signal="area_exited" from="Area2D" to="." method="_Start_Button_Left"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="area_entered" from="Button3/Area2D" to="." method="_on_Button3_area_entered"]
[connection signal="area_exited" from="Button3/Area2D" to="." method="_on_Button3_area_exited"]
